--- a/skillfactory_django_1/templates/flatpages/page_1.html
+++ b/skillfactory_django_1/templates/flatpages/page_1.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{flatpage.title}}</title>
-</head>
-<body>
-<h2>{{flatpage.content}}</h2>
-</body>
-</html>
+{% extends 'flatpages/default.html' %}
+{% block content %}
+<h2> Здесь хоть что то должно появиться</h2>
+<hr>
+{% endblock content %}
