Дз по созданию страниц и подключению стилей css Skillfactory

--- a/skillfactory_django_1/templates/flatpages/page_1.html
+++ b/skillfactory_django_1/templates/flatpages/page_1.html
@@ -2,4 +2,5 @@
 {% block content %}
 <h2> Здесь хоть что то должно появиться</h2>
 <hr>
+<h2>Появилась SkillFactory дз от Максима</h2>
 {% endblock content %}
