--- a/skillfactory_django_1/templates/flatpages/page_2.html
+++ b/skillfactory_django_1/templates/flatpages/page_2.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{flatpage.title}}</title>
-</head>
-<body>
-<i>{{flatpage.content}}</i>
-</body>
-</html>
+{% extends 'flatpages/default.html' %}
+{% block content %}
+{{ flatpages.content }}
+<h2>Я повторюсь 2 раза</h2>
+<h2>Я повторюсь 2 раза</h2>
+{{ flatpages.content }}
+{% endblock content %}
