--- a/NewsPaper/templates/search.html
+++ b/NewsPaper/templates/search.html
@@ -1,22 +1,26 @@
-<!--  наследуемся от шаблона default.html, который мы создавали для flatpages -->
 {% extends 'flatpages/default.html' %}
 {% load custom_filters %}
 
 {% block title %}
-News
+Search
 {% endblock title %}
 
 {% block content %}
-<h1>Все новости</h1>
-{% if news %}
-<h1>Количество новостей: {{news|length}}</h1>
+ <h1>Поиск новостей</h1>
+
+<form action="" method="get">
+    {{ filterset.form.as_p }}
+    <input type="submit", value="Найти">
+</form>
+<h1>Количество новостей: {{search|length}}</h1>
+{% if search %}
 <table>
     <tr>
         <td>Заголовок</td>
         <td>Дата новости</td>
         <td>Содержание</td>
     </tr>
-    {% for new1 in news %}
+    {% for new1 in search %}
     <tr>
         <td>{{ new1.title }}</td> <!-- удаляем цензор с прошлого задания  <td>{{ new1.title|censor }}</td> -->
         <td>{{ new1.dt_create|date:'d.m.Y' }}</td>
@@ -27,7 +31,7 @@ News
 {% else %}
 <h2> Нет новостей! </h2>
 {% endif %}
-   {% if page_obj.has_previous %}
+{% if page_obj.has_previous %}
        <a href="?page=1">1</a>
        {% if page_obj.previous_page_number != 1 %}
            ...
