не понятный 9 модуль

--- a/D9/templates/make_appointment.html
+++ b/D9/templates/make_appointment.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Сделаем напоминание</h1>
-<form action="{% url 'D9:make_appointment' %}" method="post"
+<form action="{% url 'make_appointment' %}" method="post"
       enctype="multipart/form-data">
     {% csrf_token %}
     <label for="client_name">Ваше имя</label>
