--- a/NewsPaper/templates/logout.html
+++ b/NewsPaper/templates/logout.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div>
-    <h1><a href="/news/singup/">Simple SignUp/SignIn app</a></h1>
+    <h1><a href="/news/signup/">Simple SignUp/SignIn app</a></h1>
 </div>
 <h2> Вы вышли из системы </h2>
 {% endblock %}
