--- a/NewsPaper/templates/protect.html
+++ b/NewsPaper/templates/protect.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div>
-    <h1><a href="/news/singup/">Simple SignUp/SignIn app</a></h1>
+    <h1><a href="/news/signup/">Simple SignUp/SignIn app</a></h1>
 </div>
 <h2>Страница авторизованного пользователя {{request.user.username}}</h2>
 <div> Здесь может содержаться персональная информация для каждого пользователя </div>
