--- a/NewsPaper/templates/signup.html
+++ b/NewsPaper/templates/signup.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div>
-    <h1><a href="/news/singup/">Simple SignUp/SignIn app</a></h1>
+    <h1><a href="/news/signup/">Simple SignUp/SignIn app</a></h1>
 </div>
 <h2> Войти в систему </h2>
 <form method="post">
@@ -10,4 +10,7 @@
 {{ form.as_p }}
 <input type="submit" value="Продолжить">
 </form>
+{% if is_not_authors %}
+<button> <a href="news/upgrade/"> Хочу Premium!</a> </button>
+{% endif %}
 {% endblock %}
