--- a/NewsPaper/templates/news.html
+++ b/NewsPaper/templates/news.html
@@ -2,11 +2,28 @@
 {% extends 'flatpages/default.html' %}
 {% load custom_filters %}
 {% load  hide_forbidden %}
+{% load i18n %}
 
 {% block title %}
 News
 {% endblock title %}
 {% block content %}
+    <form action="{% url 'set_language' %}" method="POST"> {% csrf_token %} <!-- Не забываем по csrf_token для POST запросов -->
+        <input type="hidden" name="next" value="{{ redirect_to }}">
+
+        <select name="language" id="">
+            {% get_available_languages as LANGUAGES %} <!-- получаем языки -->
+            {% get_language_info_list for LANGUAGES as languages %} <!-- Помещаем их в список languages -->
+
+            {% for language in languages %} <!-- Итерируясь по списку, выводим их название на языке пользователя и код -->
+                <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected {% endif %}>
+                    {{ language.name_local }} - {{ language.code }}
+                </option>
+            {% endfor %}
+        </select>
+        <input type="submit" value="set">
+    </form>
+<h1>{% trans "All news" %}</h1>
 <h1>Все новости</h1>
 <h1>Вы зашли как {{ news.get_username }}</h1>
 {% if news %}
